<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/ll_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">

        <TextView
                android:id="@+id/match_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:contentDescription="Home Badge"
                    android:maxHeight="115dp"
                    android:maxWidth="115dp" />

            <TextView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textFontWeight="3"
                    android:text="@string/vs" />

            <ImageView
                    android:id="@+id/img_away"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:contentDescription="Away Badge"
                    android:maxHeight="115dp"
                    android:maxWidth="115dp" />

        </LinearLayout>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

            <TextView
                    android:id="@+id/home_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginRight="14dp" />

            <TextView
                    android:id="@+id/team"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/team"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="14dp" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

            <TextView
                    android:id="@+id/home_score_match"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_score_match"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/home_shots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center" />

            <TextView
                    android:id="@+id/shots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/shots"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_shot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/home_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/goals"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/home_goalkeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/goalkeeper"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_goalkeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/home_defense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/defense"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_defense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/home_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/midfield"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/home_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#616161" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingBottom="30dp">

            <TextView
                    android:id="@+id/home_substitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/substitutes"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/away_substitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>