...
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rvFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:paddingBottom="80dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
...
